--- a/D1.md
+++ b/D1.md
@@ -183,3 +183,13 @@ classDiagram
 ```
 
     
+1)Абстрактная сущность: В диаграмме классов используется абстрактный класс User.
+
+Зачем: В системе есть два типа пользователей — Client (покупатель) и Administrator (сотрудник). У них есть общие атрибуты (ID, имя, email, логин/пароль) и методы (авторизация), но совершенно разное поведение в остальных аспектах (у клиента есть корзина и баллы лояльности, у админа — права доступа и логи).
+Реализация в коде: Мы не можем создать экземпляр просто "Пользователя", мы обязательно должны создать конкретного "Клиента" или "Администратора", которые наследуют общую логику от родителя, избегая дублирования кода.
+
+2)Ключевые паттерны отношений:
+
+Композиция (Order -- OrderItem): Если удалить Заказ, строки этого заказа (список товаров с ценами на тот момент) тоже должны исчезнуть, так как они не имеют смысла без самого заказа.
+Ассоциация (Order -> Product через OrderItem): Реализована связь "Многие-ко-Многим" с дополнительными атрибутами (количество, зафиксированная цена).
+Полиморфизм: Интерфейс Payment позволяет легко добавлять новые методы оплаты (например, Криптовалюта), просто создавая новый класс, реализующий этот интерфейс, не ломая старый код.
