--- a/D1.md
+++ b/D1.md
@@ -1,6 +1,6 @@
 ```mermaid
 classDiagram
-    %% --- ОПРЕДЕЛЕНИЕ КЛАССОВ И МОДУЛЕЙ ---
+ 
 
     namespace UserModule {
         class User {
@@ -152,7 +152,7 @@ classDiagram
         }
     }
 
-    %% --- ОТНОШЕНИЯ (RELATIONSHIPS) ---
+    %%  ОТНОШЕНИЯ 
 
     %% Наследование
     User <|-- Client : Inheritance
